--- a/modules/ROOT/pages/7.1.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.1.1-release-notes.adoc
@@ -81,7 +81,7 @@ The {productname} {release-version} release includes an accompanying release of 
 
 This **Enhanced Tables** plugin release includes the following fix.
 
-=== The sort algorithm would sometimes incorrectly compare words that start with a digit.
+==== The sort algorithm would sometimes incorrectly compare words that start with a digit.
 // #TINY-10421
 
 Previously in **Enhanced Tables**, when trying to sort a table where the cells contained text that started with numbers followed by words, the table would only consider the number part of the text when sorting. This would cause the table to incorrectly sort the words.
@@ -193,7 +193,7 @@ Previously in {productname}, there was an issue with lists when the host browser
 
 This issue has been fixed in {productname} {release-version}. Now, a check has been added to prevent the inline styles from being added following this action. As a result, the resulting HTML no longer gets undesired inline styles, and the behavior is as expected.
 
-=== Resolved an issue where emojis were not loading correctly due to a broken CDN
+=== Resolved an issue where emojis were not loading correctly due to a broken CDN.
 // #TINY-10878
 
 Recently, the original CDN url {productname} used for the twitter emoji database was discontinued. 
@@ -206,7 +206,7 @@ As a result, emoji's now render in all occasion without redirecting.
 
 For more information about these changes, see xref:emoticons.adoc#emoticons_images_url[Emoticons#emoticons_images_url].
 
-==== Iframes in dialogs were not rendering rounded borders correctly.
+=== Iframes in dialogs were not rendering rounded borders correctly.
 // #TINY-10901
 
 Previously, when opening a dialog with an `iframe` element that had a different background color than the dialog, the corners of the dialog did not round off as expected as the border radius was applied to the `iframe` parent element and not the `iframe`.
