--- a/modules/ROOT/pages/7.1.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.1.1-release-notes.adoc
@@ -59,6 +59,30 @@ For information on the **<Open source plugin name>** plugin, see xref:<plugincod
 
 The following premium plugin updates were released alongside {productname} {release-version}.
 
+=== PowerPaste
+
+The {productname} {release-version} release includes an accompanying release of the **PowerPaste** premium plugin.
+
+**PowerPaste** includes the following fix.
+
+==== A list with the start attribute, separated by `p` tags, resulted in incorrect numbering of lists.
+// TINY-10585
+
+Previously, when content from Microsoft Word contained a list that starts with a number greater than 1, and is pasted into the editor with `powerpaste` enabled, it caused all list items to display the same number.
+
+For example, a list might appear as follows:
+
+[source]
+----
+7. Point 1 
+7. Point 2
+7. Point 3
+----
+
+{productname} {release-version} addresses this issue. Now, all lists correctly render with the proper numbering.
+
+For information on the **PowerPaste** plugin, see: xref:introduction-to-powerpaste.adoc[PowerPaste].
+
 === Math Plugin
 
 The {productname} {release-version} release includes an accompanying release of the **Math** premium plugin.
