--- a/modules/ROOT/pages/7.1.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.1.1-release-notes.adoc
@@ -29,7 +29,7 @@ The following premium plugin updates were released alongside {productname} {rele
 
 The {productname} {release-version} release includes an accompanying release of the **Math** premium plugin.
 
-The **Math** premium plugin includes the following fix:
+This **Math** premium plugin release includes the following fix:
 
 ==== Clearing the formula input and then saving didn't remove the element.
 
@@ -45,7 +45,7 @@ For information on the **Math** plugin, see: xref:math.adoc[Math].
 
 The {productname} {release-version} release includes an accompanying release of the **Enhanced Tables** premium plugin.
 
-This **Enhanced Tables** plugin release includes the following fix.
+This **Enhanced Tables** plugin release includes the following fix:
 
 ==== The sort algorithm would sometimes incorrectly compare words that start with a digit.
 // #TINY-10421
@@ -74,14 +74,14 @@ For information on the **Enhanced Tables** plugin, see: xref:advtable.adoc[Enhan
 
 {productname} {release-version} also includes the following bug fixes:
 
-=== Autocompleter possible values are no longer capped at a length of 10.
-// #TINY-10942
+=== Insert/Edit image dialog lost focus after the image upload completed.
+// #TINY-10885
 
-Previously in {productname}, the Autocompleter option values were constrained to lengths of less than 10.
+Previously, when using the {productname} editor's `Insert/Edit Image` dialog and uploading an image from the 'Upload' tab, the focus would move outside of the dialog after the image was successfully uploaded.
 
-As a consequence, the Autocompleter popover would close after only one value being selected if the selected value was greater than or equal to 10. This created a limitation for users who needed to select multiple values consecutively with lengths greater than 10.
+As a consequence, users were unable to navigate within the dialog using the tab key.
 
-In {productname} {release-version}, this hardcoded limit of 10 has been removed. The Autocompleter now allows selection of multiple options consecutively with values of any length, while keeping the same popover open.
+In {productname} {release-version}, this issue has been addressed. Now, the focus remains inside the `Insert/Edit Image` dialog after uploading an image, allowing users to navigate within the dialog using the keyboard as expected.
 
 === Deleting into a list from a paragraph that has an `img` tag could cause extra inline styles to be added.
 // #TINY-10892
@@ -101,7 +101,7 @@ As a consequence, all emoji's would not render, however this issue was resolved 
 
 As a result, emoji's now render in all occasion without redirecting.
 
-For more information about these changes, see xref:emoticons.adoc#emoticons_images_url[Emoticons#emoticons_images_url].
+For more information about these changes, see xref:emoticons.adoc#emoticons_images_url[Emoticons (emoticons_images_url)].
 
 === Iframes in dialogs were not rendering rounded borders correctly.
 // #TINY-10901
@@ -112,11 +112,11 @@ Previously, when opening a dialog with an `iframe` element that had a different 
 
 As a result, borders now render properly, and the background of the `iframe` is no longer visible through to the parent dialog.
 
-=== Insert/Edit image dialog lost focus after the image upload completed.
-// #TINY-10885
+=== Autocompleter possible values are no longer capped at a length of 10.
+// #TINY-10942
 
-Previously, when using the {productname} editor's `Insert/Edit Image` dialog and uploading an image from the 'Upload' tab, the focus would move outside of the dialog after the image was successfully uploaded.
+Previously in {productname}, the Autocompleter option values were constrained to lengths of less than 10.
 
-As a consequence, users were unable to navigate within the dialog using the tab key.
+As a consequence, the Autocompleter popover would close after only one value being selected if the selected value was greater than or equal to 10. This created a limitation for users who needed to select multiple values consecutively with lengths greater than 10.
 
-In {productname} {release-version}, this issue has been addressed. Now, the focus remains inside the `Insert/Edit Image` dialog after uploading an image, allowing users to navigate within the dialog using the keyboard as expected.
+In {productname} {release-version}, this hardcoded limit of 10 has been removed. The Autocompleter now allows selection of multiple options consecutively with values of any length, while keeping the same popover open.
