DOC-2411: TinyMCE 7.1.1 Release Notes and Changelog. (#3285)
* DOC-2411: 7.1.1 Release Notes template outline

* DOC-2411: Resolved an issue where emojis were not loading correctly due to a broken CDN. (#3300)

* DOC-2411: Add TINY-10892 release note entry (#3303)

* DOC-2411: Clearing the formula input and then saving didn't remove the element (#3298)

* DOC-2411: Clearing the formula input and then saving didn't remove the element.

* Update 7.1.1-release-notes.adoc

Co-authored-by: Farzad Hayat <farzad.hayatbakhsh@tiny.cloud>

* Update 7.1.1-release-notes.adoc

Co-authored-by: Farzad Hayat <farzad.hayatbakhsh@tiny.cloud>

* Update 7.1.1-release-notes.adoc

Co-authored-by: Farzad Hayat <farzad.hayatbakhsh@tiny.cloud>

* Update 7.1.1-release-notes.adoc

Co-authored-by: Farzad Hayat <farzad.hayatbakhsh@tiny.cloud>

---------

Co-authored-by: Farzad Hayat <farzad.hayatbakhsh@tiny.cloud>

* DOC-2411: Add TINY-10421 release note entry (#3287)

* DOC-2411: Add TINY-10885 release note entry (#3286)

* DOC-2411: Add TINY-10885 release note entry

* Update modules/ROOT/pages/7.1.1-release-notes.adoc

Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

---------

Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

* DOC-2411: Iframes in dialogs were not rendering rounded borders correctly. (#3302)

* DOC-2411: Iframes in dialogs were not rendering rounded borders correctly.

* Update modules/ROOT/pages/7.1.1-release-notes.adoc

Co-authored-by: Farzad Hayat <farzad.hayatbakhsh@tiny.cloud>

* Update modules/ROOT/pages/7.1.1-release-notes.adoc

---------

Co-authored-by: Farzad Hayat <farzad.hayatbakhsh@tiny.cloud>

* Add TinyMCE 7.1.1 to changelog.adoc

* DOC-2411: Add TINY-10942 release note entry (#3304)

Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

* DOC-2411: List with start attribute separated by  tags resulted in wrong numbering of the li

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -405,6 +405,10 @@
 ** xref:tinymce-and-cors.adoc[Cross-Origin Resource Sharing (CORS)]
 * Release information
 ** xref:release-notes.adoc[Release notes for {productname} {productmajorversion}]
+*** TinyMCE 7.1.1
+**** xref:7.1.1-release-notes.adoc#overview[Overview]
+**** xref:7.1.1-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
+**** xref:7.1.1-release-notes.adoc#bug-fixes[Bug fixes]
 *** {productname} 7.1
 **** xref:7.1-release-notes.adoc#overview[Overview]
 **** * xref:7.1-release-notes.adoc#accompanying-premium-self-hosted-server-side-component-changes[Accompanying Premium self-hosted server-side component changes]
