--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -4,66 +4,82 @@
 
 NOTE: This is the {productname} Community version changelog. For information about the latest {cloudname} or {enterpriseversion} Release, see: xref:release-notes.adoc[{productname} Release Notes].
 
-== 7.1 - 2024-05-08
+== 7.1.1 - 2024-05-22
 
-### Added
+=== Fixed
 
-- New `math-equation` icon.
+* Insert/Edit image dialog lost focus after the image upload completed.
+// #TINY-10885
+* Deleting into a list from a paragraph that has an `img` tag could cause extra inline styles to be added.
+// #TINY-10892
+* Resolved an issue where emojis were not loading correctly due to a broken CDN.
+// #TINY-10878
+* Iframes in dialogs were not rendering rounded borders correctly.
+// #TINY-10901
+* Autocompleter possible values are no longer capped at a length of 10.
+// #TINY-10942
+
+== 7.1.0 - 2024-05-08
+
+=== Added
+
+* New `math-equation` icon.
 // #TINY-10804
 
-### Improved
+=== Improved
 
-- Included `itemprop`, `itemscope`, and `itemtype` as valid HTML5 attributes in the core schema.
+* Included `itemprop`, `itemscope`, and `itemtype` as valid HTML5 attributes in the core schema.
 // #TINY-9932
-- Improved accessibility for notifications: added tooltips, keyboard navigation, and a shortcut to focus on notifications.
+* Improved accessibility for notifications: added tooltips, keyboard navigation, and a shortcut to focus on notifications.
 // #TINY-6925
-- Removed `aria-pressed` from the `More` button in sliding toolbar mode and replaced it with `aria-expanded`.
+* Removed `aria-pressed` from the `More` button in sliding toolbar mode and replaced it with `aria-expanded`.
 // #TINY-10795
-- The editor UI now renders correctly in Windows High Contrast Mode.
+* The editor UI now renders correctly in Windows High Contrast Mode.
 // #TINY-10781
 
-### Fixed
+=== Fixed
 
-- Backspacing in certain HTML setups caused data to move around unexpectedly.
+* Backspacing in certain HTML setups caused data to move around unexpectedly.
 // #TINY-10590
-- Dialog title markup was changed to use an `h1` element instead of a `div`.
+* Dialog title markup was changed to use an `h1` element instead of a `div`.
 // #TINY-10800
-- The dialog title was not announced in macOS VoiceOver; dialogs now use `aria-label` instead of `aria-labelledby` on macOS.
+* The dialog title was not announced in macOS VoiceOver; dialogs now use `aria-label` instead of `aria-labelledby` on macOS.
 // #TINY-10808
-- The theme loader did not respect the suffix when loading skin CSS files.
+* The theme loader did not respect the suffix when loading skin CSS files.
 // #TINY-10602
-- Custom block elements with colon characters would throw errors.
+* Custom block elements with colon characters would throw errors.
 // #TINY-10813
-- Tab navigation in views didn't work.
+* Tab navigation in views didn't work.
 // #TINY-10780
-- Video and audio elements couldn't be played on Safari.
+* Video and audio elements couldn't be played on Safari.
 // #TINY-10774
-- The `ToggleToolbarDrawer` command did not toggle the toolbar in `sliding` mode when the `skipFocus: true` parameter was passed.
+* The `ToggleToolbarDrawer` command did not toggle the toolbar in `sliding` mode when the `skipFocus: true` parameter was passed.
 // #TINY-10726
-- The buttons in the custom view header were clipped when overflowing.
+* The buttons in the custom view header were clipped when overflowing.
 // #TINY-10741
-- In the custom view, the scrollbar of the container was not visible if its height was greater than the editor.
+* In the custom view, the scrollbar of the container was not visible if its height was greater than the editor.
 // #TINY-10741
-- Fixed an accessibility issue by removing the duplicate `role="menu"` attribute from color swatches.
+* Fixed an accessibility issue by removing the duplicate `role="menu"` attribute from color swatches.
 // #TINY-10806
-- Fullscreen mode now prevents focus from leaving the editor.
+* Fullscreen mode now prevents focus from leaving the editor.
 // #TINY-10597
-- The "Open Link" context menu action did not work when the selection surrounded a link.
+* The "Open Link" context menu action did not work when the selection surrounded a link.
 // #TINY-10391
-- Styles were not retained when toggling a list on and off.
+* Styles were not retained when toggling a list on and off.
 // #TINY-10837
-- Caret and placeholder text were invisible in Windows High Contrast Mode.
+* Caret and placeholder text were invisible in Windows High Contrast Mode.
 // #TINY-9811
-- Firefox did not announce the iframe title when `iframe_aria_text` was set.
+* Firefox did not announce the iframe title when `iframe_aria_text` was set.
 // #TINY-10718
-- Notification width was not constrained to the width of the editor.
+* Notification width was not constrained to the width of the editor.
 // #TINY-10886
-- The "Open Link" context menu action was not enabled for links on images.
+* The "Open Link" context menu action was not enabled for links on images.
 // #TINY-10391
 
 == 7.0.1 - 2024-04-10
 
 === Fixed
+
 * Toggle list behavior generated wrong HTML when the `forced_root_block` option was set to `div`.
 // #TINY-10488
 * Tapping inside a composed text on Firefox Android would not close the autocompleter.
@@ -75,13 +91,13 @@ NOTE: This is the {productname} Community version changelog. For information abo
 * The status bar was invisible when the editor's height was set to the minimum.
 // #TINY-10705
 
-
 == 7.0.0 - 2024-03-20
 
 [NOTE]
 {productname} 7.0 is licensed under GPL Version 2 or later. This version introduces a new `license_key`  configuration setting that gives self-hosted users the ability to select a usage under the GPL or to authenticate their paid license with Tiny. 
 
 === Added
+
 * New `license_key` option that must be set to `gpl` or a valid license key.
 // #TINY-10681
 * New custom tooltip functionality, tooltip will be shown when hovering with a mouse or with keyboard focus.
@@ -107,6 +123,7 @@ NOTE: This is the {productname} Community version changelog. For information abo
 * Added importword, exportpdf and exportword menu items to default file menu.
 
 === Improved
+
 * Included keyboard shortcut in custom tooltip for `ToolbarButton` and `ToolbarToggleButton`.
 // #TINY-10487
 * Improved showing which element has focus for keyboard navigation.
@@ -119,6 +136,7 @@ NOTE: This is the {productname} Community version changelog. For information abo
 // #TINY-10658
 
 === Changed
+
 * {productname} is now licensed GPL Version 2 or later.
 // #TINY-10578
 * `convert_unsafe_embeds` editor option is now defaulted to `true`.
@@ -151,6 +169,7 @@ NOTE: This is the {productname} Community version changelog. For information abo
 // #TINY-10694
 
 === Removed
+
 * Deprecated `force_hex_color` option, with the default now being all colors are forced to hex format as lower case.
 // #TINY-10436
 * Deprecated `remove_trailing_brs` option from DomParser.
@@ -167,6 +186,7 @@ NOTE: This is the {productname} Community version changelog. For information abo
 // #TINY-10654
 
 === Fixed
+
 * When deleting the last row in a table, the cursor would jump to the first cell (top left), instead of moving to the next adjacent cell in some cases.
 // #TINY-6309
 * Heading formatting would be partially applied to the content within the `summary` element when the caret was positioned between words.
