--- a/modules/ROOT/pages/editor-plugin-version.adoc
+++ b/modules/ROOT/pages/editor-plugin-version.adoc
@@ -4,7 +4,7 @@
 :keywords: tinymce, cloud, script, textarea, apiKey, hybrid
 
 [[specifying-the-tinymce-editor-version-deployed-from-cloud]]
-== Specifying the {productname} Editor Version from the Cloud
+== Specifying the {productname} editor version from {cloudname}
 
 To set the {productname} version when deploying from {cloudname}, use the following URL:
 
