DOC-2420: Port changes from 7x docs for re-write of editor-plugin-verson.adoc (#3301)
* DOC-2420: Port changes from 7x docs for re-write of editor-plugin-version.adoc page.

* Update modules/ROOT/pages/editor-plugin-version.adoc

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

* Update modules/ROOT/nav.adoc

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

* Update modules/ROOT/pages/editor-plugin-version.adoc

---------

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -123,7 +123,7 @@
 ** xref:cloud-deployment-guide.adoc[Cloud deployment guide]
 *** xref:editor-and-features.adoc[Cloud deployment of editor & plugins]
 *** xref:features-only.adoc[Cloud deployment of plugins Only]
-*** xref:editor-plugin-version.adoc[Specify editor & plugin versions]
+*** xref:editor-plugin-version.adoc[Specify editor version & plugins]
 *** xref:plugin-editor-version-compatibility.adoc[Version compatibility reference]
 *** xref:cloud-troubleshooting.adoc[Cloud Troubleshooting]
 ** Premium server-side services guide
