--- a/modules/ROOT/partials/misc/premium-plugin-list.adoc
+++ b/modules/ROOT/partials/misc/premium-plugin-list.adoc
@@ -1,7 +1,8 @@
 * xref:a11ychecker.adoc[Accessibility Checker]
-* xref:advtable.adoc[Enhanced Tables]
 * xref:advanced-typography.adoc[Advanced Typography]
+* xref:ai.adoc[AI Assistant]
 * xref:casechange.adoc[Case Change]
+* xref:advtable.adoc[Enhanced Tables]
 * xref:checklist.adoc[Checklist]
 * xref:introduction-to-tiny-comments.adoc[Comments]
 * xref:advcode.adoc[Enhanced Code Editor]
@@ -18,12 +19,12 @@
 * xref:markdown.adoc[Markdown]
 * xref:mentions.adoc[Mentions]
 * xref:mergetags.adoc[Merge Tags]
-* xref:moxiemanager.adoc[MoxieManager]
-ifeval::["{productSource}" != "cloud"]
+ifeval::['{productSource}' != 'cloud']
 * xref:moxiemanager.adoc[MoxieManager]
 endif::[]
 * xref:pageembed.adoc[Page Embed]
 * xref:permanentpen.adoc[Permanent Pen]
+* xref:revisionhistory.adoc[Revision History]
 * xref:introduction-to-powerpaste.adoc[PowerPaste]
 * xref:introduction-to-tiny-spellchecker.adoc[Spell Checker]
 * xref:autocorrect.adoc[Spelling Autocorrect]
