--- a/modules/ROOT/pages/release-notes.adoc
+++ b/modules/ROOT/pages/release-notes.adoc
@@ -11,6 +11,12 @@ This section lists the releases for {productname} 7 and the changes made in each
 
 a|
 [.lead]
+xref:7.1.2-release-notes.adoc#overview[{productname} 7.1.2]
+
+Release notes for {productname} 7.1.2
+
+a|
+[.lead]
 xref:7.1.1-release-notes.adoc#overview[{productname} 7.1.1]
 
 Release notes for {productname} 7.1.1
