--- a/modules/ROOT/pages/7.1.2-release-notes.adoc
+++ b/modules/ROOT/pages/7.1.2-release-notes.adoc
@@ -68,7 +68,7 @@ Previously, the Math icon was not set to active when a math element was selected
 
 As a consequence, users had no visual indication that a math element was selected or that it could be edited by selecting it and then clicking the toolbar button.
 
-{productname} {release-version} addresses this issue. Now, when a tiny-math-inline or tiny-math-block HTML element is selected, the button's active state is triggered.
+{productname} {release-version} addresses this issue. Now, when any Math element is selected, the button's active state is triggered.
 
 For information on the **Math** plugin, see: xref:math.adoc[Math].
 
