--- a/modules/ROOT/pages/7.1.2-release-notes.adoc
+++ b/modules/ROOT/pages/7.1.2-release-notes.adoc
@@ -53,23 +53,7 @@ For information on the **<Open source plugin name>** plugin, see xref:<plugincod
 [[accompanying-premium-plugin-changes]]
 == Accompanying Premium plugin changes
 
-The following premium plugin updates were released alongside {productname} {release-version}.
-
-=== Spell Checker
-// TINY-10904
-
-The {productname} {release-version} release includes an accompanying release of the **Spell Checker** premium plugin.
-
-**Spell Checker** includes the following fix.
-
-==== Added test for acronym handling in `tinymcespellchecker`
-// #TINY-10904
-
-{productname} {release-version} includes a fix to {productname} core to address an issue with acronyms not being managed correctly. see xref:7.1.2-release-notes.adoc#acronyms-were-not-managed-correctly[Acronyms were not managed correctly] for more details.
-
-To accompany this change, the Spell Checker tests where added to now handle acronyms correctly, ensuring the last dot is included.
-
-For information on the Spell Checker plugin, see: xref:introduction-to-tiny-spellchecker.adoc[Spell Checker].
+The following premium plugin updates were released alongside {productname} {release-version}
 
 
 [[accompanying-premium-plugin-end-of-life-announcement]]
