--- a/modules/ROOT/partials/integrations/angular-tech-ref.adoc
+++ b/modules/ROOT/partials/integrations/angular-tech-ref.adoc
@@ -5,6 +5,7 @@
 * xref:using-the-tinymce-angular-integration[Using the TinyMCE Angular integration]
 * xref:configuring-the-editor[Configuring the editor]
 ** xref:apikey[`+apiKey+`]
+** xref:licenseKey[`+licenseKey+`]
 ** xref:cloudchannel[`+cloudChannel+`]
 ** xref:disabled[`+disabled+`]
 ** xref:id[`+id+`]
@@ -124,6 +125,28 @@ include::partial$misc/get-an-api-key.adoc[]
 <editor
   apiKey="your-api-key"
 ></editor>
+----
+
+[[licenseKey]]
+=== `+licenseKey+`
+
+{cloudname} License key.
+
+Use this when self-hosting {productname} instead of loading from {cloudname}. For more information, see: xref:license-key.adoc[License Key].
+
+*Type:* `+String+`
+
+*Default value:* `+undefined+`
+
+*Possible values:* `undefined`, `'gpl'` or a valid {productname} license key
+
+==== Example: using `+licenseKey+`
+
+[source,jsx]
+----
+<Editor
+  licenseKey='your-license-key'
+/>
 ----
 
 [[cloudchannel]]
