DOC-2432: Update mention text of radio buttons to read checkbox instead.

--- a/modules/ROOT/pages/pageembed.adoc
+++ b/modules/ROOT/pages/pageembed.adoc
@@ -58,8 +58,8 @@ NOTE: The *Responsive* option has pre-defined width and height values. The *Widt
 . In the *Advanced* tab, provide a name and title for the iframe in the *Name* and *Title* fields.
 . The *Long description URL* field can be used to describe an iframe by including text in a separate resource when a short text alternative does not adequately convey the function or information provided in the iframe.
 * Click on the image:icons/browse.svg[Source](*Long description URL*) icon to upload a description file.
-. Click on the *Show iframe border* radio button to display iframe borders.
-. Click on the *Scrollbar* radio button to add scrollbars to the iframe.
+. Click on the *Show iframe border* checkbox button to display iframe borders.
+. Click on the *Scrollbar* checkbox button to add scrollbars to the iframe.
 . Click *Save* to save and exit or *Cancel* to dismiss and exit.
 
 *Result*: An iframe of the configured size is inserted in the desired location within the content.
