--- a/modules/ROOT/pages/tinydrive-googledrive-integration.adoc
+++ b/modules/ROOT/pages/tinydrive-googledrive-integration.adoc
@@ -74,7 +74,7 @@ For information on other {cloudfilemanager} config options refer to the xref:tin
 
 . From the {productname} user interface, click on the image:insertimage.png[Insert/edit image] button to access the {cloudfilemanager} user interface.
 . Click on the image:upload.png[Upload/Create] button to select Google Drive from the list of storages.
-. Select the file to upload/import from Google Drive by clicking on the radio button next to it. Alternatively, to directly insert the file into the editor, double-click on it.
+. Select the file to upload/import from Google Drive by clicking on the checkbox button next to it. Alternatively, to directly insert the file into the editor, double-click on it.
 . Choose *Save* to upload/import the selected file/files to {cloudfilemanager}.
 
 *Result:* You should be able to view the selected files in your {cloudfilemanager} storage.
