DOC-2432: remove button reference in previous PR.

--- a/modules/ROOT/pages/permanentpen.adoc
+++ b/modules/ROOT/pages/permanentpen.adoc
@@ -87,7 +87,7 @@ NOTE: The Permanent Pen has to be enabled to access the *Permanent Pen Propertie
 
 . Open the *Permanent Pen Properties* dialog box using any of the above methods. image:permanent-pen-props.png[Permanent pen properties]
 . Select the desired settings from the *Font* and *Size* drop-down menus.
-. To select the desired *Styles*, click on the checkbox button next to *Bold*, *Italic*, *Strikethrough*, or *Underline*.
+. To select the desired *Styles*, click on the checkbox next to *Bold*, *Italic*, *Strikethrough*, or *Underline*.
 . Choose the desired *Text color*.
 . Select the desired *Background color*
 . Press *Ok* to save or *Cancel* to dismiss.
