--- a/modules/ROOT/pages/tinydrive-dropbox-integration.adoc
+++ b/modules/ROOT/pages/tinydrive-dropbox-integration.adoc
@@ -51,7 +51,7 @@ For information on other {cloudfilemanager} config options refer to the xref:tin
 
 . From the {productname} user interface, click on the image:insertimage.png[Insert/edit image] button to access the {cloudfilemanager} user interface.
 . Click on the image:upload.png[Upload/Create] button to select Dropbox from the list of storages.
-. Select the file to upload/import from Dropbox by clicking on the checkbox button next to it and click the *Choose* button to upload or *Cancel* to abort the operation.
+. Select the file to upload/import from Dropbox by clicking on the checkbox next to it and click the *Choose* button to upload or *Cancel* to abort the operation.
 . Alternatively, files from your local browser can be uploaded to the Dropbox by clicking on the *Upload files* option and selecting the files to upload.
 
 *Result:* You should be able to view the selected files in your {cloudfilemanager} storage.
