DOC-2445: TinyMCE 7.2 release documentation.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -405,6 +405,8 @@
 ** xref:tinymce-and-cors.adoc[Cross-Origin Resource Sharing (CORS)]
 * Release information
 ** xref:release-notes.adoc[Release notes for {productname} {productmajorversion}]
+*** {productname} 7.2
+//
 *** {productname} 7.1.2
 **** xref:7.1.2-release-notes.adoc#overview[Overview]
 **** xref:7.1.2-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
